--- a/main_iowa_liquor.ipynb
+++ b/main_iowa_liquor.ipynb
@@ -6,7 +6,7 @@
       "name": "main_iowa_liquor.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMYt89xGjZB7rYw2u7cXgP5",
+      "authorship_tag": "ABX9TyNySNuTGbNCaeXkUS5aWuy4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,10 @@
         "colab": {}
       },
       "source": [
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "from google.colab import auth\n",
+        "auth.authenticate_user()\n",
+        "from google.cloud import bigquery"
       ],
       "execution_count": 0,
       "outputs": []
@@ -41,15 +44,155 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QbMdbYjeaEjN",
+        "id": "9XF7EWGYDpJY",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "eth_project_id = 'earnest-star-194115'\n",
+        "client = bigquery.Client(project=eth_project_id)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jmfJLq7QDpR7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "sql = \"\"\"\n",
+        "    SELECT name, SUM(number) as count\n",
+        "    FROM `bigquery-public-data.usa_names.usa_1910_current`\n",
+        "    GROUP BY name\n",
+        "    ORDER BY count DESC\n",
+        "    LIMIT 10\n",
+        "\"\"\"\n",
+        "\n",
+        "df = client.query(sql).to_dataframe()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nEoQsw6oDpVm",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 359
+        },
+        "outputId": "7b4df1e2-4faa-41ed-cae2-98cd2330ac0b"
+      },
+      "source": [
+        "df"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>name</th>\n",
+              "      <th>count</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>James</td>\n",
+              "      <td>5015584</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>John</td>\n",
+              "      <td>4885284</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Robert</td>\n",
+              "      <td>4749154</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Michael</td>\n",
+              "      <td>4366524</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>William</td>\n",
+              "      <td>3901134</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>Mary</td>\n",
+              "      <td>3750838</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>David</td>\n",
+              "      <td>3605910</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>Richard</td>\n",
+              "      <td>2544867</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>Joseph</td>\n",
+              "      <td>2528437</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>Charles</td>\n",
+              "      <td>2280600</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "      name    count\n",
+              "0    James  5015584\n",
+              "1     John  4885284\n",
+              "2   Robert  4749154\n",
+              "3  Michael  4366524\n",
+              "4  William  3901134\n",
+              "5     Mary  3750838\n",
+              "6    David  3605910\n",
+              "7  Richard  2544867\n",
+              "8   Joseph  2528437\n",
+              "9  Charles  2280600"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
     }
   ]
 }
